@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
 <addon id="plugin.video.filmibynature" name="Filmi BY NATURE"
-	version="2.0.6" provider-name="AJ">
+	version="2.0.7" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
@@ -169,7 +169,7 @@
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtle" version="1.2.3" />
+		<import addon="script.module.turtle" version="1.3.1" />
 	</requires>
 	<extension point="xbmc.service" library="TurtleMain.py"
 		start="login">
