@@ -1,3 +1,6 @@
+[B]Version v2.0.7[/B]
+Fixed "Trailer" section.
+
 [B]Version v2.0.6[/B]
 Added caching of menu section to make things work faster.
 
